<resources>
    <string name="app_name">Pilot Log</string>
    <string name="generic_error">Something went wrong</string>

    <string name="engine_type_single">Single-Engine</string>
    <string name="engine_type_multi">Multi-Engine</string>

    <string name="entry_date">Date</string>
    <string name="entry_hint_hoc">Holder\'s Operating Capacity</string>
    <string name="entry_aircraft">Aircraft</string>
    <string name="entry_type">Type</string>
    <string name="entry_reg">Reg</string>
    <string name="entry_captain">Captain</string>
    <string name="entry_from">From</string>
    <string name="entry_to">To</string>
    <string name="entry_flying_times">Flying Times</string>
    <string name="entry_save">Save</string>
    <string name="entry_discard">Discard</string>
    <string name="entry_set_date">Set Date</string>
    <string name="entry_location_departure">From</string>
    <string name="entry_journey_to">To</string>
    <string name="entry_hoc_p1">P1</string>
    <string name="entry_hoc_put">PUT</string>
    <string name="entry_set_time">Set Time</string>
    <string name="entry_departure_utc">Departure (UTC)</string>
    <string name="entry_arrival_utc">Arrival (UTC)</string>
    <string name="entry_takeoff_hint">Take-offs</string>
    <string name="entry_landings_hint">Landings</string>
    <string name="entry_error_dialog_title">Unable to save entry</string>
    <string name="entry_error_aircraft">Aircraft entry required</string>
    <string name="entry_error_arrivalTime">Arrival time required</string>
    <string name="entry_error_captain">Captain entry required</string>
    <string name="entry_error_date">Date entry required</string>
    <string name="entry_error_departureTime">Departure time required</string>
    <string name="entry_error_departure_location">Departure location required</string>
    <string name="entry_error_holders_operating_capacity">Holder\'s operating capacity required</string>
    <string name="entry_error_landing_count">Invalid landing count</string>
    <string name="entry_error_seconds_day">Invalid flying time (day)</string>
    <string name="entry_error_seconds_night">Invalid flying time (night)</string>
    <string name="entry_error_seconds_instrument">Invalid flying time (instrument)</string>
    <string name="entry_error_seconds_instrument_sim">Invalid flying time (simulated instrument)</string>
    <string name="entry_error_take_off_count">Invalid take-off count</string>
    <string name="entry_error_arrival_location">Arrival location required</string>
    <string name="entry_error_remarks">Invalid remarks</string>

    <string name="aircraft_select_registration">Registration</string>
    <string name="aircraft_select_type">Type</string>
    <string name="aircraft_select_multi_engine">Multi-Engine</string>

    <string name="add_location_name">Name</string>
    <string name="add_location_icao">ICAO (Optional)</string>
    <string name="add_location_add">Add</string>

    <string name="select_location_filter">Filter</string>
    <string name="select_location_new">New</string>

    <string name="location_view_set">Set</string>

    <string name="location_select">Select</string>

    <string name="select_aircraft_new_aircraft">New Aircraft</string>

    <string name="add_aircraft_add">Add Aircraft</string>

    <string name="new_entry_set_aircraft">Set Aircraft</string>

    <string name="flying_time_entry_day">Day</string>
    <string name="flying_time_entry_night">Night</string>
    <string name="flying_time_entry_instrument">Instrument</string>
    <string name="flying_time_entry_instrument_sim">Instrument (simulated)</string>
    <string name="flying_time_entry_save">Save</string>

    <string name="flying_time_day">Day</string>
    <string name="flying_time_night">Night</string>
    <string name="flying_time_instrument">Instrument</string>
    <string name="flying_time_instrument_sim">Instrument (simulated)</string>
    <string name="flying_time_set">Set Flying Times</string>

    <string name="duration_hours">Hours</string>
    <string name="duration_minutes">MM</string>
    <string name="duration_seconds">SS</string>
</resources>
